--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-	<title>Obeds ADMIN</title>
+	<title>Computational Methods and Network Computing</title>
 
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -47,6 +47,13 @@
 		min-height: 500px;
 		width: 100%;
 	}
+	.bordered{
+		
+	}
+	table, td, th
+	{
+		border: 1px solid;
+	}
 
 </style>
 
@@ -72,10 +79,15 @@
 
 
 	</div>
-		<div class="input-field col s12">
-          <input type = "number" id="number" class="materialize-input"></textarea>
-          <label for="textarea1">N </label>
-        </div>
+	<div style="margin-top: 30px;" class="input-field col s12">
+      <input type = "number" id="number" class="materialize-input">
+      <label for="textarea1">N </label>
+    </div>
+    <div class="clearfix"></div>
+    <div >
+    	 <div id="roots" style="display: none;" class="white-power">
+         </div>
+    </div>
    	</div>
    	<div class = "col l1 m1">
 	<div class ="line">
@@ -84,7 +96,7 @@
 	<div class = "col l5 m5 s12">
 		 
          
-         <div class="guide white-power">
+         <div id="output" class="guide white-power">
          </div>
 	</div>
 
@@ -120,7 +132,7 @@ Array.prototype.clean = function(deleteValue) {
 };
 
 function print(array){
-for (var i = 0; i < array.length; i++) {
+	for (var i = 0; i < array.length; i++) {
 		for (var j = 0; j < array[i].length; j++) {
 		    arrText+=array[i][j]+' ';
 		}
@@ -129,11 +141,32 @@ for (var i = 0; i < array.length; i++) {
 	}
 }
 
+function printMatrixInTable(array)
+{
+
+	var table = '<table class="bordered"><tbody>';
+	for (var i = 0; i < array.length; i++) {
+		table+='<tr>';
+		for (var j = 0; j < array[i].length; j++) {
+		    table+='<td>' + array[i][j]+'</td>';
+		}
+		table+='</tr>';
+	}
+	table+='</tbody></table>';
+
+	return table;
+
+
+}
+
 $(document).ready(function(){
-	var array = [[4,-1]];
-	var summ = [9];
+	
 	$('#number').on('keydown',function(e)
 	{
+		var array = [[4,-1]];
+		var summ = [9];
+		$('#output').html('');
+		$('#roots').html('');
 		if (e.keyCode == 13) {
 			var n = +$(this).val();
 
@@ -182,9 +215,10 @@ $(document).ready(function(){
 				}
 			}
 
-			
-			print(array);
-			alert('next?');
+			//console.log(printMatrixInTable(array));
+			$('#output').append('<h5>Начальная матрица</h5>');
+			$('#output').append(printMatrixInTable(array));
+			//alert('next?');
 			for (var i = 0; i < array.length; i++) {
 				gamma = i==0?array[i][i]:getGamma(array[i][i],array[i][i-1],alpha);
 				alpha = getAlpha(array[i][i+1],gamma);
@@ -193,13 +227,13 @@ $(document).ready(function(){
 				array[i][i-1] = 0;
 				if(array[i][i+1]!=undefined)
 				{
-					array[i][i+1] = -alpha;
+					array[i][i+1] = -alpha.toFixed(2);
 				}
 				//console.log(beta);
 				summ[i] = beta;
 			}
-			console.log("\r\n--------------------------------------");
-			print(array);
+			$('#output').append('<h5>Матрица после "прогонки"</h5>');
+			$('#output').append(printMatrixInTable(array));
 
 			x = Array(n).fill(0);
 			x[n] = summ[n];
@@ -209,13 +243,13 @@ $(document).ready(function(){
 				x[i] = array[i][i+1] * x[i+1] + summ[i];
 
 			}
-			alert('next?');
-			//console.log(summ);
-			console.log("\r\n--------------------------------------");
+			
+			$('#roots').append('<h5>Решения матрицы</h5>');
 			for (var i = 0; i < n; i++) 
 			{
-				console.log('x'+i +'= ' + x[i]);
+				$('#roots').append('x'+i +'= ' + x[i].toFixed(2) + '<br>');
 			}
+			$('#roots').fadeIn("slow");
 		}
 		
 						
